integrated new thread model with ui and ml gateway
