# api/docs/swagger.json
@@ -144,7 +144,7 @@
                 }
             }
         },
-        "/recipes/{recipe_id}": {
+        "/recipes/{recipeId}": {
             "get": {
                 "description": "Get recipe by ID",
                 "consumes": [
@@ -162,7 +162,7 @@
                     {
                         "type": "string",
                         "description": "Recipe ID",
-                        "name": "recipe_id",
+                        "name": "recipeId",
                         "in": "path",
                         "required": true
                     }
@@ -217,7 +217,7 @@
                     {
                         "type": "string",
                         "description": "Recipe ID",
-                        "name": "recipe_id",
+                        "name": "recipeId",
                         "in": "path",
                         "required": true
                     }
@@ -243,6 +243,66 @@
                     },
                     "404": {
                         "description": "Recipe not found",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIError"
+                        }
+                    }
+                }
+            }
+        },
+        "/recipes/{recipeId}/modify/chat": {
+            "post": {
+                "description": "Modify a recipe via chat",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "thread"
+                ],
+                "summary": "Modify a recipe via chat",
+                "operationId": "modifyRecipe",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Recipe ID",
+                        "name": "recipeId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Modify recipe via chat request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ModifyRecipeViaChatRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UserRecipe"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIError"
+                        }
+                    },
+                    "404": {
+                        "description": "Thread not found",
                         "schema": {
                             "$ref": "#/definitions/models.APIError"
                         }
@@ -447,66 +507,6 @@
                         "name": "suggestionId",
                         "in": "path",
                         "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.UserRecipe"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/models.APIError"
-                        }
-                    },
-                    "404": {
-                        "description": "Thread not found",
-                        "schema": {
-                            "$ref": "#/definitions/models.APIError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/models.APIError"
-                        }
-                    }
-                }
-            }
-        },
-        "/thread/{threadId}/modify/chat": {
-            "post": {
-                "description": "Modify a recipe via chat",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "thread"
-                ],
-                "summary": "Modify a recipe via chat",
-                "operationId": "modifyRecipe",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Thread ID",
-                        "name": "threadId",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Modify recipe via chat request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.ModifyRecipeViaChatRequest"
-                        }
                     }
                 ],
                 "responses": {
@@ -1041,6 +1041,7 @@
                 "accepted",
                 "created_at",
                 "id",
+                "rejected",
                 "response_text",
                 "suggestion",
                 "thread_id",
@@ -1055,6 +1056,9 @@
                 },
                 "id": {
                     "type": "string"
+                },
+                "rejected": {
+                    "type": "boolean"
                 },
                 "response_text": {
                     "type": "string"
