# api/internal/recipe/handler.go
@@ -8,6 +8,7 @@ import (
 	"github.com/ajohnston1219/eatme/api/internal/db"
 	"github.com/ajohnston1219/eatme/api/internal/models"
 	"github.com/go-chi/chi/v5"
+	"go.uber.org/zap"
 )
 
 type RecipeHandler struct {
@@ -26,13 +27,13 @@ func NewRecipeHandler(recipeService *RecipeService) *RecipeHandler {
 // @Tags Recipe
 // @Accept json
 // @Produce json
-// @Param recipe_id path string true "Recipe ID"
+// @Param recipeId path string true "Recipe ID"
 // @Success 200 {object} models.UserRecipe
 // @Failure 400 {object} models.APIError "Invalid input"
 // @Failure 401 {object} models.APIError "Unauthorized"
 // @Failure 404 {object} models.APIError "Recipe not found"
 // @Failure 500 {object} models.APIError "Internal server error"
-// @Router /recipes/{recipe_id} [get]
+// @Router /recipes/{recipeId} [get]
 func (h *RecipeHandler) GetRecipe(w http.ResponseWriter, r *http.Request) {
 	userID := api.GetUserID(r)
 	if userID == "" {
@@ -40,31 +41,33 @@ func (h *RecipeHandler) GetRecipe(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	recipeId := chi.URLParam(r, "recipe_id")
+	recipeId := chi.URLParam(r, "recipeId")
 	if recipeId == "" {
 		api.ErrorJSON(w, http.StatusBadRequest, models.ApiErrBadRequest)
 		return
 	}
 
+	var recipe *models.UserRecipe
 	err := h.recipeService.db.WithTx(func(tx db.Store) error {
+		var err error
 		ctx := db.ContextWithTx(r.Context(), tx)
-		recipe, err := h.recipeService.GetUserRecipe(ctx, userID, recipeId)
+		recipe, err = h.recipeService.GetUserRecipe(ctx, userID, recipeId)
 		if err != nil {
-			switch {
-			case errors.Is(err, ErrRecipeNotFound):
-				api.ErrorJSON(w, http.StatusNotFound, models.ApiErrRecipeNotFound)
-			default:
-				api.ErrorJSON(w, http.StatusInternalServerError, models.ApiErrInternal)
-			}
-			return nil
+			zap.L().Error("failed to get user recipe", zap.Error(err))
+			return err
 		}
-		api.WriteJSON(w, http.StatusOK, recipe)
 		return nil
 	})
 	if err != nil {
-		api.ErrorJSON(w, http.StatusInternalServerError, models.ApiErrInternal)
+		switch {
+		case errors.Is(err, ErrRecipeNotFound):
+			api.ErrorJSON(w, http.StatusNotFound, models.ApiErrRecipeNotFound)
+		default:
+			api.ErrorJSON(w, http.StatusInternalServerError, models.ApiErrInternal)
+		}
 		return
 	}
+	api.WriteJSON(w, http.StatusOK, recipe)
 }
 
 // @Summary Get all recipes for user
@@ -85,20 +88,27 @@ func (h *RecipeHandler) GetAllRecipes(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	var recipes []models.UserRecipe
 	err := h.recipeService.db.WithTx(func(tx db.Store) error {
+		var err error
 		ctx := db.ContextWithTx(r.Context(), tx)
-		recipes, err := h.recipeService.GetAllUserRecipes(ctx, userID)
+		recipes, err = h.recipeService.GetAllUserRecipes(ctx, userID)
 		if err != nil {
-			api.ErrorJSON(w, http.StatusInternalServerError, models.ApiErrInternal)
-			return nil
+			zap.L().Error("failed to get all user recipes", zap.Error(err))
+			return err
 		}
-		api.WriteJSON(w, http.StatusOK, recipes)
 		return nil
 	})
 	if err != nil {
-		api.ErrorJSON(w, http.StatusInternalServerError, models.ApiErrInternal)
+		switch {
+		case errors.Is(err, ErrRecipeNotFound):
+			api.ErrorJSON(w, http.StatusNotFound, models.ApiErrRecipeNotFound)
+		default:
+			api.ErrorJSON(w, http.StatusInternalServerError, models.ApiErrInternal)
+		}
 		return
 	}
+	api.WriteJSON(w, http.StatusOK, recipes)
 }
 
 // @Summary Delete recipe
@@ -107,13 +117,13 @@ func (h *RecipeHandler) GetAllRecipes(w http.ResponseWriter, r *http.Request) {
 // @Tags Recipe
 // @Accept json
 // @Produce json
-// @Param recipe_id path string true "Recipe ID"
+// @Param recipeId path string true "Recipe ID"
 // @Success 200 {object} models.UserRecipe
 // @Failure 400 {object} models.APIError "Invalid input"
 // @Failure 401 {object} models.APIError "Unauthorized"
 // @Failure 404 {object} models.APIError "Recipe not found"
 // @Failure 500 {object} models.APIError "Internal server error"
-// @Router /recipes/{recipe_id} [delete]
+// @Router /recipes/{recipeId} [delete]
 func (h *RecipeHandler) DeleteRecipe(w http.ResponseWriter, r *http.Request) {
 	userID := api.GetUserID(r)
 	if userID == "" {
@@ -121,7 +131,7 @@ func (h *RecipeHandler) DeleteRecipe(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	recipeId := chi.URLParam(r, "recipe_id")
+	recipeId := chi.URLParam(r, "recipeId")
 	if recipeId == "" {
 		api.ErrorJSON(w, http.StatusBadRequest, models.ApiErrBadRequest)
 		return
@@ -132,6 +142,7 @@ func (h *RecipeHandler) DeleteRecipe(w http.ResponseWriter, r *http.Request) {
 		return h.recipeService.DeleteUserRecipe(ctx, userID, recipeId)
 	})
 	if err != nil {
+		zap.L().Error("failed to delete user recipe", zap.Error(err))
 		switch {
 		case errors.Is(err, ErrRecipeNotFound):
 			api.ErrorJSON(w, http.StatusNotFound, models.ApiErrRecipeNotFound)
